update(docs): update example in scenario sub stores (#78)

--- a/docs/examples/scenario_6_sub_stores.ipynb
+++ b/docs/examples/scenario_6_sub_stores.ipynb
@@ -335,7 +335,7 @@
     "# Add new semantic memory (should stay in main store)\n",
     "print(\"\\n3. Adding new semantic memory...\")\n",
     "memory.add(\n",
-    "    messages=\"Docker is a platform for developing and deploying containerized applications\",\n",
+    "    messages=\"Docker is a platform for developing and deploying containerized applications,I love using Docker\",\n",
     "    metadata={\"memory_type\": \"semantic\", \"topic\": \"technology\"},\n",
     "    user_id=user_id\n",
     ")\n",
