feat(usermemory): Query rewrite (#186)
* add query rewrite function

* adjust config

* add docs

* fix empty string bug

--- a/docs/examples/scenario_9_user_memory.ipynb
+++ b/docs/examples/scenario_9_user_memory.ipynb
@@ -25,7 +25,76 @@
     "- **Automatic profile extraction**: Extracts user-related information from conversations (name, profession, interests, preferences, etc.)\n",
     "- **Continuous profile updates**: Updates and refines the profile based on new conversations\n",
     "- **Profile storage**: Stores profiles separately from memories for efficient retrieval\n",
-    "- **Joint search**: Optionally includes profile information when searching memories"
+    "- **Joint search**: Optionally includes profile information when searching memories\n",
+    "\n",
+    "## Optional: Query Rewrite with User Profile\n",
+    "\n",
+    "`UserMemory.search()` can optionally rewrite the query using the user's profile to improve recall. This is disabled by default and only runs when `query_rewrite.enabled=True` and a `user_id` with `profile_content` is available. If the profile is missing, the query is too short, or the rewrite fails, it falls back to the original query.\n",
+    "\n",
+    "Practical example (profile + ambiguous query):\n",
+    "\n",
+    "```python\n",
+    "from powermem import UserMemory, auto_config\n",
+    "\n",
+    "config = auto_config()\n",
+    "user_memory = UserMemory(config=config)\n",
+    "\n",
+    "user_id = \"user_rewrite_demo\"\n",
+    "\n",
+    "# Build profile with relocation info\n",
+    "user_memory.add(\n",
+    "    messages=\"Last month I moved from Chengdu to Hangzhou, and started a new job.\",\n",
+    "    user_id=user_id,\n",
+    "    profile_type=\"content\"\n",
+    ")\n",
+    "\n",
+    "# Ambiguous query that relies on profile context\n",
+    "results = user_memory.search(\n",
+    "    query=\"Recommend some delicious food near my place.\",\n",
+    "    user_id=user_id,\n",
+    "    limit=5\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "Contrast: rewrite enabled vs disabled\n",
+    "\n",
+    "```python\n",
+    "import os\n",
+    "\n",
+    "# Enable query rewrite via env\n",
+    "os.environ[\"QUERY_REWRITE_ENABLED\"] = \"true\"\n",
+    "user_memory_rewrite = UserMemory(config=auto_config())\n",
+    "\n",
+    "# Disable query rewrite via env\n",
+    "os.environ[\"QUERY_REWRITE_ENABLED\"] = \"false\"\n",
+    "user_memory_no_rewrite = UserMemory(config=auto_config())\n",
+    "\n",
+    "# Same query, same user profile\n",
+    "query = \"Recommend some delicious food near my place.\"\n",
+    "\n",
+    "result_with_rewrite = user_memory_rewrite.search(\n",
+    "    query=query,\n",
+    "    user_id=user_id,\n",
+    "    limit=5\n",
+    ")\n",
+    "\n",
+    "result_without_rewrite = user_memory_no_rewrite.search(\n",
+    "    query=query,\n",
+    "    user_id=user_id,\n",
+    "    limit=5\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "You can also enable this via environment variables (see `.env.example`):\n",
+    "\n",
+    "```\n",
+    "QUERY_REWRITE_ENABLED=false\n",
+    "# QUERY_REWRITE_PROMPT=\n",
+    "# QUERY_REWRITE_MODEL_OVERRIDE=\n",
+    "```\n",
+    "\n",
+    "- `QUERY_REWRITE_PROMPT` is optional custom instructions for rewrite.\n",
+    "- `QUERY_REWRITE_MODEL_OVERRIDE` is optional and must be another model from the same LLM provider family."
    ]
   },
   {
