Resolve conflicts and merge into main. (#226)
* feat: Add native hybird search (#197)

* add sparse vector embedding

* hybrid search add sparse vector search

* add checking version logic

* add qwen sparse vector

* adjust weight

* update sparse vector function

* update sparse vector function

* fix bug

* fix bug

* optimise function

* optimise function

* optimise function

* optimise function

* optimise function

* optimise function

* optimise function

* fix bug

* add migrate function

* update alembic function

* update alembic function

* update alembic function

* adjust file struct

* update alembic

* update version

* optimise

* fix bug

* update

* update schema update method

* update schema update method

* update schema update method

* update schema update method

* update schema update method

* update migrate method

* update migrate method

* update env.example

* update env.example

* update migrate sparse vector

* update migrate sparse vector

* adjust threshold score logic

* update remark

* add guides and examples

* add benchmark param

* fix bug

* fulltext parsers support

* adjust enable sparse vector setting

* adjust env.example

* adjust docs

* update version

* fix bug

* optimise check

* adjust file construct

* adjust file construct

* add native search

* add file

* remove log

* remove log

* fix bug

* update pyobvector

* add rerank

* adjust

* add limit

* adjust config

* feat: User Profile Support native language output (#198)

* support native language

* support native language

* add docs

* Reconstruct LLM setting (#200)

* feat(llm): enhance configuration management with pydantic-settings

- Introduced a unified configuration system for LLM providers using pydantic-settings.
- Added provider-specific settings for Anthropic, Azure, DeepSeek, Ollama, OpenAI, Qwen, Vllm, and Zai.
- Improved environment variable handling and validation through Field and AliasChoices.
- Removed legacy initialization methods in fa

--- a/docs/examples/scenario_9_user_memory.ipynb
+++ b/docs/examples/scenario_9_user_memory.ipynb
@@ -395,10 +395,89 @@
   },
   {
    "cell_type": "markdown",
+   "id": "native_language_step",
+   "metadata": {},
+   "source": [
+    "## Step 7: Extract Profile in Native Language\n",
+    "\n",
+    "You can specify a native language for profile extraction, ensuring the profile is written in the user's preferred language regardless of the conversation language:\n",
+    "\n",
+    "**Supported Language Codes (ISO 639-1):**\n",
+    "\n",
+    "| Code | Language | Code | Language |\n",
+    "|------|----------|------|----------|\n",
+    "| zh | Chinese | en | English |\n",
+    "| ja | Japanese | ko | Korean |\n",
+    "| fr | French | de | German |\n",
+    "| es | Spanish | it | Italian |\n",
+    "| pt | Portuguese | ru | Russian |\n",
+    "| ar | Arabic | hi | Hindi |\n",
+    "| th | Thai | vi | Vietnamese |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "native_language_code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from powermem import UserMemory, auto_config\n",
+    "\n",
+    "config = auto_config()\n",
+    "user_memory = UserMemory(config=config)\n",
+    "\n",
+    "# Example 1: English conversation, Chinese profile\n",
+    "conversation_en = [\n",
+    "    {\"role\": \"user\", \"content\": \"I am a software engineer working in Beijing. I love drinking tea and reading books.\"},\n",
+    "    {\"role\": \"assistant\", \"content\": \"That sounds great!\"}\n",
+    "]\n",
+    "\n",
+    "result_zh = user_memory.add(\n",
+    "    messages=conversation_en,\n",
+    "    user_id=\"user_bilingual_001\",\n",
+    "    native_language=\"zh\"  # Extract profile in Chinese\n",
+    ")\n",
+    "\n",
+    "print(\"✓ English conversation processed\")\n",
+    "if result_zh.get('profile_content'):\n",
+    "    print(f\"  - Profile (Chinese): {result_zh['profile_content']}\")\n",
+    "\n",
+    "# Example 2: Chinese conversation, English profile\n",
+    "conversation_zh = [\n",
+    "    {\"role\": \"user\", \"content\": \"I'm 25 years old, working at Microsoft in Seattle.\"},\n",
+    "    {\"role\": \"assistant\", \"content\": \"Nice to meet you\"}\n",
+    "]\n",
+    "\n",
+    "result_en = user_memory.add(\n",
+    "    messages=conversation_zh,\n",
+    "    user_id=\"user_bilingual_002\",\n",
+    "    native_language=\"en\"  # Extract profile in English\n",
+    ")\n",
+    "\n",
+    "print(\"\\n✓ Chinese conversation processed\")\n",
+    "if result_en.get('profile_content'):\n",
+    "    print(f\"  - Profile (English): {result_en['profile_content']}\")\n",
+    "\n",
+    "# Example 3: Structured topics with native language\n",
+    "result_topics = user_memory.add(\n",
+    "    messages=\"I'm 25 years old, working at Microsoft in Seattle.\",\n",
+    "    user_id=\"user_bilingual_003\",\n",
+    "    profile_type=\"topics\",\n",
+    "    native_language=\"zh\"  # Topic values in Chinese, keys remain English\n",
+    ")\n",
+    "\n",
+    "print(\"\\n✓ Structured topics extracted\")\n",
+    "if result_topics.get('topics'):\n",
+    "    print(f\"  - Topics: {result_topics['topics']}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c1757147ee07603e",
    "metadata": {},
    "source": [
-    "## Step 7: Delete User Profile\n",
+    "## Step 8: Delete User Profile\n",
     "\n",
     "Delete a user profile:"
    ]
